--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "Delta Mobile",
-    "slug": "Delta Mobile",
-    "version": "26.0.0",
+    "slug": "delta-mobile",
+    "version": "26.1.12",
     "orientation": "portrait",
     "icon": "./assets/main_icon.png",
     "userInterfaceStyle": "light",
@@ -31,7 +31,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "46852109-34a9-4539-8574-677fdff8c1a1"
+        "projectId": "a1241f7c-c9d6-410a-b39a-ba001b2f24da"
       }
     }
   }
