--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "46852109-34a9-4539-8574-677fdff8c1a1"
+        "projectId": ""
       }
     }
   }
