--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo-camera": "~17.0.10",
     "expo-constants": "^18.0.13",
     "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
